--- a/Lesson20/aysen/styles.css
+++ b/Lesson20/aysen/styles.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-    
 }
 body {
   font-family: Arial, sans-serif;
@@ -8,7 +7,6 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1.3rem;
- 
 }
 
 .container {
@@ -20,9 +18,7 @@ body {
 header {
   text-align: center;
   margin-bottom: 2rem;
- 
 }
-
 
 .booking {
   display: flex;
@@ -47,14 +43,14 @@ header {
 #name,
 #email {
   padding: 0.5rem;
-   font-size: 1rem; 
+  font-size: 1rem;
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.4rem;
 }
 
 fieldset {
   border: none;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.2rem;
 }
 
 .timeslots {
@@ -77,20 +73,36 @@ fieldset {
   background-color: #ddd;
 }
 
+.slot.selected {
+  background-color: #ced1d8;
+}
+
+#confirm {
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#confirm:hover {
+  background-color: #ced1d8;
+}
+
 .summary {
-  flex: 1.3;
+  flex: 1.6;
   background: white;
   padding: 2rem;
-   border-radius: 8px; 
-  
+  border-radius: 8px;
 }
 
 .summary p {
-  margin: 1rem 0;
+  margin: 1.1rem 0;
+  line-height: 1.4;
 }
 
 #confirmation-card {
-  background-color: #87b4d4;
+  background-color: #ced1d8;
   border: 2px solid #17181a;
   border-radius: 10px;
   padding: 2rem;
@@ -99,13 +111,13 @@ fieldset {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
 .hidden {
   display: none;
 }
 
-#message {
-  white-space: pre-line;
-  color: red;
-  font-weight: bold;
+.error-message {
+  margin-top: 0;
+  padding-bottom: 10px;
+  color: #888;
+  font-size: medium;
 }
